* vm_trace.c: clear and restore recursive checking thread local data   to avoid unexpected throw from TracePoint.   [Bug #9940] * test/ruby/test_settracefunc.rb: add a test. * thread.c: adde   * rb_threadptr_reset_recursive_data(rb_thread_t *th);   * rb_threadptr_restore_recursive_data(rb_thread_t *th, VALUE old); * vm_core.h: ditto.

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@46419 b2dd03c8-39d4-4d8f-98ff-823fe69b080e